Added volume button
Added volume button

--- a/Radio.ipynb
+++ b/Radio.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tkinter import *\n",
+    "\n",
     "from pygame import mixer\n",
     "\n",
     "#creating a frame/window\n",
@@ -55,6 +55,15 @@
     "window.mainloop()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
