--- a/Radio.ipynb
+++ b/Radio.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "import tkinter.messagebox\n",
     "from pygame import mixer\n",
+    "from tkinter import *\n",
+    "from tkinter import filedialog\n",
     "\n",
     "#creating a frame/window\n",
     "window = Tk()\n",
@@ -24,19 +26,37 @@
     "text= Label(window,text=\"Radio : Enjoy it !\")\n",
     "text.pack()\n",
     "\n",
+    "#currentfile = \"C:\\\\Users\\\\ramola\\\\Desktop\\\\Git_Hub\\\\MusicPlayer\\\\Songs\\\\01 Ishq Di Baajiyaan - Soorma  (SongsMp3.Com).mp3\"\n",
+    "\n",
     "def play_btn():\n",
-    "    mixer.music.load(r\"C:\\Users\\ramola\\Desktop\\Python\\Projects\\MediaPlayer\\Songs\\Daryaa1.mp3\")\n",
-    "    mixer.music.play()\n",
-    "    print(\"this is working fine\")\n",
+    "    try: \n",
+    "        mixer.music.load(currentfile)\n",
+    "        mixer.music.play()\n",
+    "    except : \n",
+    "        tkinter.messagebox.showerror(\"No Song Selected\",\"Please select a song first.\")\n",
+    "        \n",
     "    \n",
     "def pause_btn():\n",
     "    mixer.music.pause()\n",
     "    \n",
     "def set_volume(val):\n",
-    "    volume = int(val)/100\n",
+    "    volume = int(val)/100 #set_volume takes value b/w 0 and 1\n",
     "    mixer.music.set_volume(volume)\n",
     "    \n",
+    "def on_closing_window():\n",
+    "    mixer.music.stop()\n",
+    "    window.destroy()\n",
     "    \n",
+    "def about_us():\n",
+    "    tkinter.messagebox.showinfo(\"MusicPlayer\",\"This is version 1.0\")\n",
+    "    \n",
+    "def browse_file():\n",
+    "    global currentfile\n",
+    "    currentfile = filedialog.askopenfilename()\n",
+    "        \n",
+    "#Events define on closing window\n",
+    "window.protocol(\"WM_DELETE_WINDOW\",on_closing_window)\n",
+    "\n",
     "#adding play button \n",
     "playphoto = PhotoImage(file='C:\\\\Users\\\\ramola\\\\Desktop\\\\Python\\\\Projects\\\\MediaPlayer\\\\img\\\\play.png')\n",
     "playbtn = Button (window, image = playphoto,command = play_btn)\n",
@@ -49,21 +69,34 @@
     "\n",
     "#Creating a scale widget\n",
     "scale = Scale(window,from_=0, to =100, orient=HORIZONTAL,command = set_volume)\n",
+    "scale.set(20)\n",
+    "mixer.music.set_volume(20/100)\n",
     "scale.pack()\n",
+    "\n",
+    "#creating a menubar\n",
+    "menubar = Menu(window)\n",
+    "window.config(menu=menubar)\n",
+    "\n",
+    "#creating a File submenu\n",
+    "menu1 = Menu(menubar,tearoff=0)\n",
+    "menubar.add_cascade(label=\"File\",menu=menu1)\n",
+    "menu1.add_command(label=\"Open\",command = browse_file)\n",
+    "menu1.add_command(label=\"Exit\", command=on_closing_window)\n",
+    "\n",
+    "#creating a Help submenu\n",
+    "menu2= Menu(menubar,tearoff=0)\n",
+    "menubar.add_cascade(label=\"Help\",menu=menu2)\n",
+    "menu2.add_command(label=\"About\",command=about_us)\n",
+    "menu2.add_command(label=\"Contact Us\")\n",
+    "\n",
+    "#creating status bar\n",
+    "statusbar = Label(window,text=\"MusicPlayer: Status\", relief = SUNKEN)\n",
+    "statusbar.pack(side=BOTTOM, fill = X)\n",
     "\n",
     "#looping the window to appear for infinite time until user kills it.\n",
     "window.mainloop()\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
